<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/home_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?colorSecondaryVariant"
            android:gravity="center_vertical"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

            <TextView
                android:id="@+id/home_toolbar_fragment_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home_fragment_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_toolbar_search_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/home_toolbar_search_bar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="recipe"
                    android:hint="@string/menu_search_bar_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/home_toolbar_search_not_active"
                    android:layout_width="@dimen/menu_search_icon_size"
                    android:layout_height="@dimen/menu_search_icon_size"
                    android:layout_gravity="center"
                    android:contentDescription="@string/menu_search_icon_description"
                    android:src="@drawable/ic_menu_search"
                    android:visibility="visible"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/home_toolbar_search_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/menu_search_icon_description"
                    android:src="@drawable/ic_home_menu_arrow"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/home_toolbar_search_bar"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_recipes_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="4"
        tools:listitem="@layout/item_recipe_preview" />
</LinearLayout>
